log
Sat May  7 00:58:01 UTC 2022: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function ‘createHeap’:
heap.c:34:3: error: unknown type name ‘Heapelem’; did you mean ‘heapElem’?
   Heapelem *
   ^~~~~~~~
   heapElem
heap.c:35:7: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   heap->size = 0;
       ^~
Compilation failed
cdd6d72
Sat May  7 00:58:09 UTC 2022: 
 heap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|4
total_score: 0/70
918e616
Sat May  7 00:59:40 UTC 2022: 
 heap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
heap.c: In function ‘createHeap’:
heap.c:34:14: error: expected identifier or ‘(’ before ‘=’ token
   heapElem * = (heapElem*) malloc(3 * sizeof(heapElem))
              ^
Compilation failed
71c168d
Sat May  7 00:59:51 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function ‘createHeap’:
heap.c:35:3: error: expected ‘,’ or ‘;’ before ‘h’
   h->size = 0;
   ^
heap.c:34:14: error: unused variable ‘harray’ [-Werror=unused-variable]
   heapElem * harray = (heapElem*) malloc(3 * sizeof(heapElem))
              ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
4e56577
Sat May  7 01:00:11 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function ‘createHeap’:
heap.c:34:14: error: unused variable ‘harray’ [-Werror=unused-variable]
   heapElem * harray = (heapElem*) malloc(3 * sizeof(heapElem));
              ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
4d81401
Sat May  7 01:01:14 UTC 2022: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function ‘createHeap’:
heap.c:36:20: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
   harray->priority = NULL;
                    ^
cc1: all warnings being treated as errors
Compilation failed
e06c512
